add lesson class with necessary structure depends quiz,video with kafka to make relation between two services but still not complete